fix spacing

--- a/client-web/src/StripBoard.scss
+++ b/client-web/src/StripBoard.scss
@@ -12,8 +12,6 @@
   border: 1px solid white;
 
   min-width: 300px;
-  // Make room for the frequency selector and the buttons.
-  max-height: 79vh;
 
   overflow-y: auto;
 
