--- a/client-web/src/style.scss
+++ b/client-web/src/style.scss
@@ -286,9 +286,12 @@ input[type='button']:hover {
   justify-content: space-between;
   align-items: flex-end;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0;
+  right: 0;
+
+  padding: 10px;
   font-size: 18px;
+  gap: 10px;
 
   pointer-events: none;
 
